# query-sensor-data

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/metadata/: 0.json
notebooks/: sensor_queries-csv.ipynb  sensor_queries-live.ipynb  sensor_queries.ipynb
src/query_sensor_data/: __init__.py  __main__.py
